--- a/templates/index.html
+++ b/templates/index.html
@@ -117,6 +117,11 @@
 
       function sendClearInterval() {
         conn?.send(JSON.stringify({ messageType: "clearInterval" }));
+
+        document.getElementById("fadeInterval").value = "0";
+        document.getElementById("displayLength").value = "0";
+        document.getElementById("fadeTimeUnit").value = "Choose a time unit";
+        document.getElementById("displayTimeUnit").value = "Choose a time unit";
       }
     </script>
   </head>
@@ -210,6 +215,7 @@
         <select
           id="fadeTimeUnit"
           class="bg-gray-50 text-gray-900 text-sm rounded-r-md border-l-2 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-2 dark:focus:ring-offset-4 dark:focus:ring-offset-slate-50"
+          required
         >
           <option selected>Choose a time unit</option>
           <option value="MILISECONDS">Miliseconds</option>
@@ -234,6 +240,7 @@
         <select
           id="displayTimeUnit"
           class="bg-gray-50 text-gray-900 text-sm rounded-r-md border-l-2 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-2 dark:focus:ring-offset-4 dark:focus:ring-offset-slate-50"
+          required
         >
           <option selected>Choose a time unit</option>
           <option value="MILISECONDS">Miliseconds</option>
