--- a/templates/index.html
+++ b/templates/index.html
@@ -16,69 +16,60 @@
         const serverUrl = `${scheme}://${location.hostname}:${location.port}/ws`;
         conn = new WebSocket(serverUrl);
 
-        conn.onopen = function () {
-          document
-            .getElementById("connected-message")
-            .classList.remove("hidden");
-          document
-            .getElementById("disconnected-message")
-            .classList.add("hidden");
-        };
-
-        conn.onclose = function (evt) {
-          document.getElementById("connected-message").classList.add("hidden");
-          document
-            .getElementById("disconnected-message")
-            .classList.remove("hidden");
+        conn.onopen = () => {
+          conn.send(JSON.stringify({ messageType: "checkConnection" }));
         };
 
         conn.onmessage = function (evt) {
-          const messages = evt.data.split("\n");
+          try {
+            const data = JSON.parse(evt.data);
 
-          messages.forEach((message) => {
-            try {
-              const data = JSON.parse(message);
+            if (data.messageType === "refreshConnection") {
+              conn.send(JSON.stringify({ messageType: "checkConnection" }));
+              document.getElementById("connected-message").classList.add("hidden");
+              document.getElementById("disconnected-message").classList.remove("hidden");
+            } else if (data.messageType === "mirrorConnected") {
+              document.getElementById("connected-message").classList.remove("hidden");
+              document.getElementById("disconnected-message").classList.add("hidden");
+            } else if (data.messageType === "mirrorDisconnected") {
+              document.getElementById("connected-message").classList.add("hidden");
+              document.getElementById("disconnected-message").classList.remove("hidden");
+            } else if (
+              data.messageType === "setAvailableImages" &&
+              !createdImageGallery
+            ) {
+              const images = data.payload.split(",");
 
-              if (
-                data.messageType === "setAvailableImages" &&
-                !createdImageGallery
-              ) {
-                const images = data.payload.split(",");
+              images.forEach((image) => {
+                const newImg = document.createElement("img");
+                newImg.src = image;
+                newImg.className = "hover:cursor w-60 h-60";
+                newImg.alt = image;
+                newImg.onclick = () => handleImageSelection(image);
 
-                images.forEach((image) => {
-                  const newImg = document.createElement("img");
-                  newImg.src = image;
-                  newImg.className = "hover:cursor w-60 h-60";
-                  newImg.alt = image;
-                  newImg.onclick = () => handleImageSelection(image);
+                document.getElementById("image-grid").appendChild(newImg);
+              });
 
-                  document.getElementById("image-grid").appendChild(newImg);
-                });
-
-                createdImageGallery = true;
-              } else if (data.messageType === "setImage") {
-                document.getElementById("now-playing").src = data.payload;
-              } else if (data.messageType === "setVisibilityStatus") {
-                if (data.payload) {
-                  document
-                    .getElementById("imageVisibleContainer")
-                    .classList.remove("hidden");
-                  document
-                    .getElementById("imageHiddenContainer")
-                    .classList.add("hidden");
-                } else {
-                  document
-                    .getElementById("imageVisibleContainer")
-                    .classList.add("hidden");
-                  document
-                    .getElementById("imageHiddenContainer")
-                    .classList.remove("hidden");
-                }
+              createdImageGallery = true;
+            } else if (data.messageType === "setImage") {
+              document.getElementById("now-playing").src = data.payload;
+            } else if (data.messageType === "setVisibilityStatus") {
+              if (data.payload) {
+                document
+                  .getElementById("imageVisibleContainer")
+                  .classList.remove("hidden");
+                document.getElementById("imageHiddenContainer").classList.add("hidden");
+              } else {
+                document.getElementById("imageVisibleContainer").classList.add("hidden");
+                document
+                  .getElementById("imageHiddenContainer")
+                  .classList.remove("hidden");
               }
-            } catch (e) {
-              console.log(e);
             }
-          });
+          } catch (e) {
+            console.log(event.data);
+            console.log(e);
+          }
         };
       };
 
@@ -91,6 +82,13 @@
         const fadeTimeUnit = getInputValue("fadeTimeUnit");
         const displayLength = getInputValueAsInt("displayLength");
         const displayTimeUnit = getInputValue("displayTimeUnit");
+
+        if (
+          displayTimeUnit === "Choose a time unit" ||
+          fadeTimeUnit === "Choose a time unit"
+        ) {
+          return;
+        }
 
         const payload = JSON.stringify({
           fadeInterval,
@@ -127,22 +125,16 @@
   </head>
   <body class="bg-white dark:bg-black dark:text-white">
     <div class="grid">
-      <h1
-        class="text-4xl md:text-5xl lg:text-6xl font-bold justify-self-center"
-      >
+      <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold justify-self-center">
         Ghost Mirror UI 👻
       </h1>
       <span id="connected-message" class="text-lg justify-self-end hidden mr-2">
-        <span
-          class="h-2 w-2 mb-1 my-2 rounded-full bg-green-600 inline-block"
-        ></span>
+        <span class="h-2 w-2 mb-1 my-2 rounded-full bg-green-600 inline-block"></span>
         Connected to mirror
       </span>
-      <span id="disconnected-message" class="text-lg justify-self-end hidden">
-        <span
-          class="h-2 w-2 mb-1 my-2 rounded-full bg-red-600 inline-block"
-        ></span>
-        Connection closed
+      <span id="disconnected-message" class="text-lg justify-self-end">
+        <span class="h-2 w-2 mb-1 my-2 rounded-full bg-red-600 inline-block"></span>
+        Not connected to mirror
       </span>
     </div>
 
